[package]
name = "ark_resolver"
version = "1.12.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
base64 = "0.22.1"
config = "0.15.8"
pyo3 = { version = "0.22.6", features = [] }
pyo3-python-tracing-subscriber = "0.1.0"
regex = "1.9"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0"
tracing-subscriber = "0.3.19"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v5"] }

[dev-dependencies]
assert_cmd = "2.0"

[build-dependencies]
pyo3-build-config = "0.23.5"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
