[package]
name = "ark_resolver"
version = "1.13.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait = "0.1"
base64 = "0.22.1"
config = "0.15.8"
pyo3 = { version = "0.22.6", features = [] }
pyo3-python-tracing-subscriber = "0.1.0"
regex = "1.9"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v5"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.0"
serial_test = "3.0"

[build-dependencies]
pyo3-build-config = "0.23.5"

[features]
extension-module = ["pyo3/extension-module"]
pyo3 = []
default = ["extension-module", "pyo3"]
